# storage/api-docs/api-docs.json
@@ -804,13 +804,13 @@
                 }
             }
         },
-        "/api/add-comment": {
+        "/api/admin-add-product": {
             "post": {
                 "tags": [
-                    "Comment"
+                    "Product"
                 ],
-                "summary": "Create a new comment",
-                "operationId": "cc700dca3d8bb28a66876976f18d5e5e",
+                "summary": "Create a new product",
+                "operationId": "82d58feb7083d29d7c889a4e9c54ae3a",
                 "parameters": [
                     {
                         "name": "product_id",
@@ -831,6 +831,151 @@
                         }
                     }
                 ],
+                "parameters": [
+                    {
+                        "name": "product_name",
+                        "in": "query",
+                        "description": "Name of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "price",
+                        "in": "query",
+                        "description": "Price of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    },
+                    {
+                        "name": "discount",
+                        "in": "query",
+                        "description": "Discount on the product",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    },
+                    {
+                        "name": "quantity",
+                        "in": "query",
+                        "description": "Quantity of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "description": "Description of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "ingredient",
+                        "in": "query",
+                        "description": "Ingredients of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "brand",
+                        "in": "query",
+                        "description": "Brand of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "category_id",
+                        "in": "query",
+                        "description": "Category ID of the product",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image_url": {
+                                        "type": "array",
+                                        "items": {
+                                            "description": "Images of prduct",
+                                            "type": "string",
+                                            "format": "binary"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add new product successfully"
+                    },
+                    "422": {
+                        "description": "Validation errors"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
+        "/api/admin-product-delete/{id}": {
+            "delete": {
+                "tags": [
+                    "Product"
+                ],
+                "summary": "Delete a product by ID",
+                "operationId": "1d6596e1c2a855227ce7fbe5a0b824e9",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the product to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int32"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Product not found"
+                    }
+                }
+            }
+        },
+        "/api/add-comment": {
+            "post": {
+                "tags": [
+                    "Comment"
+                ],
+                "summary": "Create a new comment",
+                "operationId": "cc700dca3d8bb28a66876976f18d5e5e",
                 "requestBody": {
                     "description": "Comment data",
                     "required": true,
@@ -876,200 +1021,6 @@
                         "required": true,
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "404": {
-                        "description": "Product not found"
-                    }
-                }
-            }
-        },
-        "/api/admin-add-product": {
-            "post": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Create a new product",
-                "operationId": "82d58feb7083d29d7c889a4e9c54ae3a",
-                "requestBody": {
-                    "description": "Product data",
-                    "required": true,
-                    "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "product_name",
-                                    "price",
-                                    "discount",
-                                    "quantity",
-                                    "description",
-                                    "ingredient",
-                                    "brand",
-                                    "category_id",
-                                    "image_url"
-                                ],
-                                "properties": {
-                                    "product_name": {
-                                        "type": "string"
-                                    },
-                                    "price": {
-                                        "type": "number",
-                                        "format": "float"
-                                    },
-                                    "discount": {
-                                        "type": "number",
-                                        "format": "float"
-                                    },
-                                    "quantity": {
-                                        "type": "integer",
-                                        "format": "int32"
-                                    },
-                                    "description": {
-                                        "type": "string"
-                                    },
-                                    "ingredient": {
-                                        "type": "string"
-                                    },
-                                    "brand": {
-                                        "type": "string"
-                                    },
-                                    "category_id": {
-                                        "type": "integer",
-                                        "format": "int32"
-                                    },
-                                    "image_url": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "string",
-                                            "format": "binary"
-                                        }
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/api/admin-product/{id}": {
-            "put": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Update a product",
-                "operationId": "ddc06c3a76e1811d765ca6c5ec7d6fef",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the product to update",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "description": "Product data",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "product_name",
-                                    "price",
-                                    "discount",
-                                    "quantity",
-                                    "description",
-                                    "ingredient",
-                                    "brand",
-                                    "category_id",
-                                    "image_url"
-                                ],
-                                "properties": {
-                                    "product_name": {
-                                        "type": "string"
-                                    },
-                                    "price": {
-                                        "type": "number",
-                                        "format": "float"
-                                    },
-                                    "discount": {
-                                        "type": "number",
-                                        "format": "float"
-                                    },
-                                    "quantity": {
-                                        "type": "integer",
-                                        "format": "int32"
-                                    },
-                                    "description": {
-                                        "type": "string"
-                                    },
-                                    "ingredient": {
-                                        "type": "string"
-                                    },
-                                    "brand": {
-                                        "type": "string"
-                                    },
-                                    "category_id": {
-                                        "type": "integer",
-                                        "format": "int32"
-                                    },
-                                    "image_url": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "string",
-                                            "format": "binary"
-                                        }
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Success"
-                    },
-                    "404": {
-                        "description": "Product not found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "Product"
-                ],
-                "summary": "Delete a product by ID",
-                "operationId": "984558e67c1262edf2131c7634190405",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the product to delete",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int32"
                         }
                     }
                 ],
